--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "koa": "^2.13.4",
-    "koa-mount": "^4.0.0"
+    "koa-mount": "^4.0.0",
+    "protocol-buffers": "^4.2.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
